--- a/Login/WebContent/WEB-INF/web.xml
+++ b/Login/WebContent/WEB-INF/web.xml
@@ -10,9 +10,19 @@
     <servlet-name>LoginServlet</servlet-name>
     <servlet-class>com.ioryz.login.servlet.LoginServlet</servlet-class>
   </servlet>
+  <servlet>
+    <description></description>
+    <display-name>DashboardServlet</display-name>
+    <servlet-name>DashboardServlet</servlet-name>
+    <servlet-class>com.ioryz.login.servlet.DashboardServlet</servlet-class>
+  </servlet>
   <servlet-mapping>
     <servlet-name>LoginServlet</servlet-name>
     <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>DashboardServlet</servlet-name>
+    <url-pattern>/dashboard</url-pattern>
   </servlet-mapping>
   <error-page>
     <error-code>404</error-code>
